--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 @import url(./partials/_global.css);
 
 
+
+
 /* start navigation */ 
 
 .header_area .main-menu .navbar .navbar-brand{
@@ -43,3 +45,44 @@
 
 
 /* end navigation */ 
+
+
+
+/* Banner Area */ 
+
+.site-main .site-banner{
+    background: url(../img/banner/home-banner.png) no-repeat 0% 180%;
+
+}
+
+.site-main .site-banner .site-title h3{
+    padding-top: 35%;
+    font-weight: 500;
+}
+
+.site-main .site-banner .site-title h3::after{
+    content: "";
+    height: 1px;
+    width: 18vw;
+    background: black;
+    display: inline-block;
+    margin-left: 5%;
+    transform: translateY(-10px);
+}
+
+.site-main .site-banner .site-title h1{
+    font-size: 5rem;
+}
+
+
+.site-main .site-banner .site-title h4{
+    font-size: 1.5rem;
+}
+
+.site-main .site-banner .banner-image > img{
+    padding: 7rem 0;
+    width: 90rem;
+}
+
+
+/* End Banner Area */ 
